arc: Open privacy settings instead top-level settings.

Settings link in ARC++ OptIn UI is used in section about statistics
collection. It is more usable to user to open settings at privacy page
that contains relevant information.

Test: Manually
Bug: 821328
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I8a4d9809618dedfdae7ca06e55680290ffb3eb5d
Reviewed-on: https://chromium-review.googlesource.com/1061623
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Yury Khmel <khmel@google.com>
Cr-Commit-Position: refs/heads/master@{#559293}
Former-commit-id: cc46beb506e982c506c8d11e8d9838480047ef04